--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://username.github.io/repository-name",
+  "homepage": "https://thanasispro.github.io/tools-page",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
